[gd_scene load_steps=4 format=2]

[ext_resource path="res://Control.gd" type="Script" id=1]
[ext_resource path="res://gray-wallpaper-35.jpg" type="Texture" id=2]
[ext_resource path="res://Sprites PI/Selectchar/heroe_1.png" type="Texture" id=3]

[node name="Selectchar" type="Control"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )

[node name="Fundo" type="Sprite" parent="." index="0"]

position = Vector2( 636.299, 393.788 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="player" type="Sprite" parent="." index="1"]

position = Vector2( 318.486, 355.201 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Right" type="Button" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 417.0
margin_top = 337.0
margin_right = 439.0
margin_bottom = 359.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Left" type="Button" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 188.0
margin_top = 337.0
margin_right = 211.0
margin_bottom = 360.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Select" type="Button" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 684.0
margin_top = 552.0
margin_right = 1035.0
margin_bottom = 607.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Select"
flat = false
align = 1

[connection signal="pressed" from="Right" to="." method="_on_Button_pressed"]

[connection signal="pressed" from="Left" to="." method="_on_Button2_pressed"]

[connection signal="pressed" from="Select" to="." method="_on_Select_pressed"]


